--- a/app/app.css
+++ b/app/app.css
@@ -1,3 +1,48 @@
+/* stylelint-disable scss/at-rule-no-unknown */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .button {
+    @apply w-full px-5 py-3 border-2 rounded-full;
+
+    &:hover {
+      @apply hover:translate-y-[-2px];
+    }
+  }
+
+  .rounde-card {
+    @apply flex flex-col items-center justify-center flex-1 rounded-corners;
+  }
+}
+
+@layer utilities {
+  body {
+    @apply bg-white;
+  }
+
+  .title-large {
+    @apply text-4xl font-medium leading-10;
+  }
+
+  .title-medium {
+    @apply text-xl font-bold leading-7;
+  }
+
+  .title-small {
+    @apply text-base font-bold leading-6;
+  }
+
+  .body-large {
+    @apply text-xl font-normal leading-7;
+  }
+
+  .body-meduim {
+    @apply text-base font-normal leading-6;
+  }
+
+  .body-small {
+    @apply text-xs font-medium leading-4;
+  }
+}
