--- a/app/components/product.hbs
+++ b/app/components/product.hbs
@@ -1,13 +1,13 @@
-<div class="my-4 mx-auto p-5 border border-cyan-950 rounded-lg">
-  <p class="my-2">
+<div class='p-5 mx-auto my-4 border rounded-lg border-cyan-950'>
+  <p class='my-2'>
     <span>Product name: {{@product.name}}</span>
     <span>Product price: {{@product.price}}</span>
   </p>
-  <p class="my-2">In Cart: {{this.quantity}}</p>
+  <p class='my-2'>In Cart: {{this.quantity}}</p>
   <button
-    type="button"
-    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
-    {{on "click" this.addToCart}}
+    type='button'
+    class='px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700'
+    {{on 'click' this.addToCart}}
   >
     Add to cart
   </button>
