--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,13 +1,13 @@
 {{page-title "KshopApp"}}
 
 <nav class="bg-gray-500">
-  <div class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8">
-    <div class="relative flex h-16 items-center justify-between">
-      <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
+  <div class="px-2 mx-auto max-w-7xl sm:px-6 lg:px-8">
+    <div class="relative flex items-center justify-between h-16">
+      <div class="flex items-center justify-center flex-1 sm:items-stretch sm:justify-start">
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
-            <LinkTo @route="index" class="text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Home</LinkTo>
-            <LinkTo @route="products" class="text-white hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Products</LinkTo>
+            <LinkTo @route="index" class="px-3 py-2 text-sm font-medium text-white hover:bg-gray-700 hover:text-white rounded-md">Home</LinkTo>
+            <LinkTo @route="products" class="px-3 py-2 text-sm font-medium text-white hover:bg-gray-700 hover:text-white rounded-md">Products</LinkTo>
           </div>
         </div>
       </div>
