--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,12 +1,12 @@
 {{page-title 'KshopApp'}}
 <nav class="nav">
   <div class="">
-    <LinkTo @route="index" class="cursor-pointer">
+    <LinkTo @route="products" class="cursor-pointer">
       <img src={{'/assets/specialfx.png'}} alt="specialfx logo" class="logo" />
     </LinkTo>
   </div>
-  <div class="">
-    <LinkTo @route="cart" class="cursor-pointer">
+  <div class="p-2 rounded-lg shadow-md bg-gray50">
+    <LinkTo @route="cart" class="cursor-pointer ">
       <SvgIcon @name="cart" @width="24" @height="24" />
     </LinkTo>
   </div>
