--- a/app/templates/cart.hbs
+++ b/app/templates/cart.hbs
@@ -1,2 +1,88 @@
-{{page-title "Cart"}}
-{{outlet}}
+<div class="container-wrapper">
+  <div class="bread-crumbs">
+    <LinkTo
+      @route="products"
+      class="inline-flex items-center cursor-pointer link-to"
+    >
+      <SvgIcon @name="arrow-left" @class="w-6 h-6" />
+      <span class="p-2 body-medium text-gray800">
+        Continue shopping
+      </span>
+    </LinkTo>
+  </div>
+  <div class="my-32 mt-4 title-wrapper">
+    <h1 class="title-large text-gray800">
+      Shopping Cart
+    </h1>
+    <p class="mt-2 body-large">
+      You have 4 items in your cart.
+    </p>
+  </div>
+  <div class="container-summary">
+    <ul class="item-summary">
+      <li>
+        item1
+      </li>
+      <li>
+        item1
+      </li>
+      <li>
+        item1
+      </li>
+    </ul>
+    <div class="total-summary">
+      <div class="px-8 py-4 bg-gray100">
+        <h3 class="title-medium text-gray800">
+          Summary
+        </h3>
+      </div>
+      <div class="flex flex-row p-8 border-b-2 border-gray100">
+        <SvgIcon
+          @name="arrow-right"
+          @class="flex items-start w-6 h-auto cursor-pointer"
+        />
+        <div class="grid w-full -mt-1 gap-y-4 body-medium text-gray800">
+          <div class="flex justify-between gap-2">
+            <span>
+              subtotal
+            </span>
+            <span class="font-bold">
+              100
+            </span>
+          </div>
+          <div class="flex justify-between gap-2">
+            <p>
+              shipping cost
+            </p>
+            <span class="font-bold">
+              100
+            </span>
+          </div>
+          <div class="flex justify-between gap-2">
+            <p>
+              discount
+            </p>
+            <span class="font-bold">
+              100
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="flex justify-between px-8 pt-4">
+        <p class="body-large">
+          Total Payable
+        </p>
+        <span class="font-bold title-medium">
+          £19.34
+        </span>
+      </div>
+      <div class="flex justify-end p-8">
+        <button
+          class="font-bold text-white button bg-violet700"
+        >
+          Go to Checkout
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
