--- a/app/templates/item.hbs
+++ b/app/templates/item.hbs
@@ -1,7 +1,1 @@
-{{page-title "Item"}}
-<h1>
-  item
-  {{this.model}}
-  is here
-</h1>
-{{outlet}}
+{{page-title 'Item'}}<Product @product={{this.model}} />{{outlet}}
