--- a/app/templates/not-found.hbs
+++ b/app/templates/not-found.hbs
@@ -1,8 +1,8 @@
-{{page-title "NotFound"}}
+{{page-title 'NotFound'}}
 <LinkTo
   @route="products"
   class="px-3 py-2 text-sm font-medium text-white bg-gray-700 rounded-md"
 >
-  Products page
+  Back to Products page
 </LinkTo>
 {{outlet}}
