--- a/app/components/svg-icon.hbs
+++ b/app/components/svg-icon.hbs
@@ -1,12 +1,3 @@
-<div class="p-2 rounded-lg shadow-md bg-gray50">
-  {{#if this.isSvgLoaded}}
-    <img
-      src={{concat "/assets/" @name ".svg"}}
-      alt={{concat @name "Icon"}}
-    />
-  {{else}}
-    <div>
-      Loading SVG...
-    </div>
-  {{/if}}
+<div class={{@class}}>
+  <img src={{concat '/assets/' @name '.svg'}} alt={{concat @name 'Icon'}} />
 </div>
