--- a/app/components/product.hbs
+++ b/app/components/product.hbs
@@ -1,23 +1,6 @@
-<div class="p-5 mx-auto my-4 border rounded-lg border-cyan-950">
-  <p class="my-2">
-    <span>
-      Product name:
-      {{@product.name}}
-    </span>
-    <span>
-      Product price:
-      {{@product.price}}
-    </span>
-  </p>
-  <p class="my-2">
-    In Cart:
-    {{this.quantity}}
-  </p>
-  <button
-    type="button"
-    class="px-4 py-2 font-bold text-white bg-blue-500 rounded hover:bg-blue-700"
-    {{on "click" this.addToCart}}
-  >
+<div class="border rounded-lg">
+  <Product::Image @src={{@product}} />
+  <Product::Details @product={{@product}}>
     Add to cart
-  </button>
+  </Product::Details>
 </div>
