--- a/app/components/bread-crumbs.hbs
+++ b/app/components/bread-crumbs.hbs
@@ -1,13 +1,21 @@
 <div class="bread-crumbs">
-  <LinkTo
-    @route={{@toRoute}}
-    class="inline-flex items-center cursor-pointer link-to"
-  >
-    <SvgIcon @name="arrow-left" @class="w-6 h-6" />
-    <span class="p-2 body-medium text-gray800">
-      {{@toRoute}}
-    </span>
-  </LinkTo>
+  {{#if @toRoute}}
+    <LinkTo
+      @route={{@toRoute}}
+      class="inline-flex items-center cursor-pointer link-to"
+    >
+      <SvgIcon @name="arrow-left" @class="w-6 h-6" />
+      <span class="p-2 body-medium text-gray800">
+        {{@linkTitle}}
+      </span>
+    </LinkTo>
+  {{else}}
+    {{#each @breadCrumbs as |crumb|}}
+      <span class="p-2 body-medium text-gray800 active-bread-crumbs">
+        {{crumb}}
+      </span>
+    {{/each}}
+  {{/if}}
 </div>
 <div class="mt-4 mb-8 title-wrapper">
   <h1 class="title-large text-gray800">
