--- a/app/components/product/details.hbs
+++ b/app/components/product/details.hbs
@@ -4,14 +4,14 @@
       {{@product.name}}
     </span>
     <span class="body-large">
-      {{@product.price}}
+      {{currency @product.price}}
     </span>
   </p>
   {{!-- <p class="my-2">
       In Cart:
       {{this.quantity}}
     </p> --}}
-  <div class='self-end'>
+  <div class="self-end">
     <GeneralButton
       @bgColor="bg-violet50"
       @color="text-violet700"
