--- a/app/components/product/image.hbs
+++ b/app/components/product/image.hbs
@@ -1,5 +1,9 @@
 <div class="relative">
-  <img src={{@src.src}} alt={{concat @src.src 'Image'}} class="product-image" />
+  <img
+    src={{@src.src}}
+    alt={{concat @src.src 'Image'}}
+    class="{{if @isOnProduct 'rounded-tl-lg' 'product-image'}}"
+  />
   <div class="absolute right-4 top-4">
     <GeneralButton
       @bgColor="bg-teal100"
