--- a/app/templates/cart.hbs
+++ b/app/templates/cart.hbs
@@ -1,6 +1,7 @@
 <GeneralContainer>
   <BreadCrumbs
     @toRoute="products"
+    @linkTitle="Continue shopping"
     @pageTitle="Shopping Cart"
     @pageSubtitle="You have 4 items in your cart."
   />
@@ -33,7 +34,7 @@
               subtotal
             </span>
             <span class="font-bold">
-              {{!-- {{this.subtotal}} --}}
+              {{!-- {{currency this.subtotal}} --}}
             </span>
           </div>
           <div class="flex justify-between gap-2">
@@ -41,7 +42,7 @@
               shipping cost
             </p>
             <span class="font-bold">
-              {{!-- {{this.total}} --}}
+              {{!-- {{currency this.subtotal}} --}}
             </span>
           </div>
           <div class="flex justify-between gap-2">
@@ -49,7 +50,7 @@
               discount
             </p>
             <span class="font-bold">
-              {{!-- {{this.tax}} --}}
+              {{!-- {{currency this.subtotal}} --}}
             </span>
           </div>
         </div>
