--- a/app/templates/products.hbs
+++ b/app/templates/products.hbs
@@ -1,8 +1,8 @@
 <GeneralContainer>
   <BreadCrumbs
-    @toRoute="products"
     @pageTitle="Groceries"
     @pageSubtitle="Special FX offers only the finest organic produce."
+    @breadCrumbs={{array "Groceries" "Wine" "Clothes" "FX"}}
   />
   <div class="flex flex-row gap-14">
     {{#each this.model as |product|}}
