--- a/app/components/product/image.hbs
+++ b/app/components/product/image.hbs
@@ -2,15 +2,16 @@
   <img
     src={{@src.src}}
     alt={{concat @src.src 'Image'}}
-    class="{{if @isOnProduct 'rounded-tl-lg' 'product-image'}}"
+    class="{{if @isOnCart 'cart-image' 'product-image'}}"
   />
-  <div class="absolute right-4 top-4">
-    <GeneralButton
-      @bgColor="bg-teal100"
-      @color="text-teal900"
-      @fontWeight="font-normal"
-    >
-      {{@src.discount}}
-    </GeneralButton>
-  </div>
+  {{#unless @isOnCart}}
+    <div class="absolute right-4 top-4">
+      <button
+        type="button"
+        class="font-normal rounded-lg button bg-teal100 text-teal900"
+      >
+        {{@src.discount}}
+      </button>
+    </div>
+  {{/unless}}
 </div>
