--- a/app/templates/products.hbs
+++ b/app/templates/products.hbs
@@ -2,13 +2,11 @@
   <BreadCrumbs
     @pageTitle="Groceries"
     @pageSubtitle="Special FX offers only the finest organic produce."
-    @breadCrumbs={{array "Groceries" "Wine" "Clothes" "FX"}}
+    @breadCrumbs={{array 'Groceries' 'Wine' 'Clothes' 'FX'}}
   />
   <div class="flex flex-row gap-14">
     {{#each this.model as |product|}}
-      <LinkTo @route="item" @model={{product.id}}>
-        <Product @product={{product}} />
-      </LinkTo>
+      <Product @product={{product}} />
     {{/each}}
   </div>
 </GeneralContainer>
