--- a/app/components/svg-icon.hbs
+++ b/app/components/svg-icon.hbs
@@ -4,5 +4,8 @@
     <span class="px-2 bg-white rounded-full title-small text-bold">
       {{@quantity}}
     </span>
+    <span>
+      {{@totalPayable}}
+    </span>
   {{/if}}
 </div>
