--- a/app/components/general-container.hbs
+++ b/app/components/general-container.hbs
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="">
     <LinkTo @route="products" class="cursor-pointer">
-      <img src={{'/assets/specialfx.png'}} alt="specialfx logo" class="logo" />
+      <img src={{'/assets/specialfx.png'}} alt="specialfx" class="logo" />
     </LinkTo>
   </div>
   <div class="p-2 rounded-lg shadow-md bg-gray50">
@@ -11,6 +11,7 @@
           @name="cart-violet"
           @class="flex items-center w-auto h-6 gap-2 cursor-pointer text-violet700"
           @quantity={{this.itemsCount}}
+          @totalPayable={{@totalPayable}}
         />
       {{else}}
         <SvgIcon
