--- a/app/templates/products.hbs
+++ b/app/templates/products.hbs
@@ -4,7 +4,7 @@
     @pageSubtitle="Special FX offers only the finest organic produce."
     @breadCrumbs={{array 'Groceries' 'Wine' 'Clothes' 'FX'}}
   />
-  <div class="flex flex-row gap-14">
+  <div class="flex flex-col justify-between lg:flex-row gap-14">
     {{#each this.model as |product|}}
       <Product @product={{product}} />
     {{/each}}
