--- a/app/templates/not-found.hbs
+++ b/app/templates/not-found.hbs
@@ -1,8 +1,10 @@
 <GeneralContainer>
-  <LinkTo
-    @route="products"
-    class="px-3 py-2 text-sm font-medium text-white bg-gray-700 rounded-md"
-  >
-    Looks you break the internet
-  </LinkTo>
+  <div class="flex justify-center p-24">
+    <LinkTo
+      @route="products"
+      class="px-3 py-2 text-sm font-medium text-center text-white bg-gray-700 rounded-md"
+    >
+      Looks you break the internet
+    </LinkTo>
+  </div>
 </GeneralContainer>
