--- a/app/components/product/details.hbs
+++ b/app/components/product/details.hbs
@@ -20,21 +20,21 @@
   <div class="self-end">
     {{#if (gte @product.quantity 1)}}
       <div class="font-bold button bg-violet50 text-violet700">
-        <span {{on 'click' (fn @removeFromCart @product)}}>
+        <button  type="button" {{on 'click' (fn @removeFromCart @product)}}>
           <SvgIcon
             @name="bin-icon"
             @class="flex items-center w-auto h-6 gap-2 cursor-pointer text-violet700"
           />
-        </span>
+        </button>
         <span>
           {{@product.quantity}}
         </span>
-        <span {{on 'click' (fn @addToCart @product)}}>
+        <button type="button" {{on 'click' (fn @addToCart @product)}}>
           <SvgIcon
             @name="plus-icon"
             @class="flex items-center w-auto h-6 gap-2 cursor-pointer text-violet700"
           />
-        </span>
+        </button>
       </div>
     {{else}}
       <button
