some basic test

--- a/app/components/bread-crumbs.hbs
+++ b/app/components/bread-crumbs.hbs
@@ -18,7 +18,7 @@
   {{/if}}
 </div>
 <div class="mt-4 mb-8 title-wrapper">
-  <h1 class="title-large text-gray800">
+  <h1 class="title-large text-gray800" data-test-bread-crumbs-title>
     {{@pageTitle}}
   </h1>
   <p class="mt-2 body-large">
