--- a/app/components/general-container.hbs
+++ b/app/components/general-container.hbs
@@ -1,7 +1,7 @@
 <nav class="nav">
   <div class="">
     <LinkTo @route="products" class="cursor-pointer">
-      <img src={{'/assets/specialfx.png'}} alt="specialfx" class="logo" />
+      <img src={{'/assets/specialfx.png'}} alt="specialfx" class="logo"  data-test-app-logo/>
     </LinkTo>
   </div>
   <div class="p-2 rounded-lg shadow-md bg-gray50">
