--- a/app/components/product/image.hbs
+++ b/app/components/product/image.hbs
@@ -7,6 +7,7 @@
   {{#unless @isOnCart}}
     <div class="absolute right-4 top-4">
       <button
+        data-test-discount-info
         type="button"
         class="font-normal rounded-lg button bg-teal100 text-teal900"
       >
