--- a/app/components/product/details.hbs
+++ b/app/components/product/details.hbs
@@ -3,7 +3,7 @@
     <span class="title-medium">
       {{@product.name}}
     </span>
-    <span class="body-large">
+    <span class="body-large" data-test-price>
       {{currency @product.price}}
     </span>
   </p>
@@ -20,7 +20,7 @@
   <div class="self-end">
     {{#if (gte @product.quantity 1)}}
       <div class="font-bold button bg-violet50 text-violet700">
-        <button  type="button" {{on 'click' (fn @removeFromCart @product)}}>
+        <button type="button" {{on 'click' (fn @removeFromCart @product)}}>
           <SvgIcon
             @name="bin-icon"
             @class="flex items-center w-auto h-6 gap-2 cursor-pointer text-violet700"
