--- a/app/components/general-container.hbs
+++ b/app/components/general-container.hbs
@@ -1,6 +1,6 @@
 <nav class="nav">
   <div class="">
-    <LinkTo @route="products" class="cursor-pointer">
+    <LinkTo @route="index" class="cursor-pointer">
       <img src={{'/assets/specialfx.png'}} alt="specialfx" class="logo"  data-test-app-logo/>
     </LinkTo>
   </div>
