--- a/app/templates/cart.hbs
+++ b/app/templates/cart.hbs
@@ -1,6 +1,6 @@
 <GeneralContainer @totalPayable={{currency this.totalPayable}}>
   <BreadCrumbs
-    @toRoute="products"
+    @toRoute="index"
     @linkTitle="Continue shopping"
     @pageTitle="Shopping Cart"
     @pageSubtitle={{if
