--- a/app/templates/not-found.hbs
+++ b/app/templates/not-found.hbs
@@ -1,7 +1,7 @@
 <GeneralContainer>
   <div class="flex justify-center p-24">
     <LinkTo
-      @route="products"
+      @route="index"
       class="px-3 py-2 text-sm font-medium text-center text-white bg-gray-700 rounded-md"
     >
       Looks you break the internet
