--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,12 @@
-{{page-title 'KshopApp'}}
-
-{{outlet}}
+<GeneralContainer>
+  <BreadCrumbs
+    @pageTitle="Groceries"
+    @pageSubtitle="Special FX offers only the finest organic produce."
+    @breadCrumbs={{array 'Groceries' 'Wine' 'Clothes' 'FX'}}
+  />
+  <div class="flex flex-col justify-between lg:flex-row gap-14">
+    {{#each this.model as |product|}}
+      <Product @product={{product}} />
+    {{/each}}
+  </div>
+</GeneralContainer>
